--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.10.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react-hook-form": "^7.45.2",
     "zod": "^3.21.4"
   },
