--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ MONGODB_CONNECT_URI=mongodb+srv://funarogf:xmuVyZU3XBXeFkZ2@clusternumen.jeksy4n
 SECRET=secretKey123.
 FRONTEND_URL=http://localhost:5173
 CODESPACE_URL=https://shiny-zebra-447vvr7vw7wcq9x7-5173.app.github.dev
+NODEMAILER_PASS=nudv ucbr vmmx rayr
 
 # SUPRA_ROLE
 # Usuario: supraRole
