--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.10.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.12",
     "react-hook-form": "^7.45.2",
     "zod": "^3.21.4"
   },
